fix for REst id
